Unit Test RestTemplate

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://thymeleaf.org">
   <head>
     <title>Mars Rover Api App</title>
   </head>
   <body>
     <h2>Welcome to the Mars Rover Api Web App</h2> 
+
+    <div>The test </div>
+    
   </body>
-</html>
+</html> 
