--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,7 +6,9 @@
   <body>
     <h2>Welcome to the Mars Rover Api Web App</h2> 
 
-    <div>The test </div>
+    <div th:text="${name}">The test </div>
+    <div th:text="${address}">The test </div>
+     <div>The test </div>
     
   </body>
 </html> 
