--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,13 +2,25 @@
 <html xmlns:th="http://thymeleaf.org">
   <head>
     <title>Mars Rover Api App</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   </head>
   <body>
-    <h2>Welcome to the Mars Rover Api Web App</h2> 
-    <img th:each="photo : ${roverData.photos}" th:src="${photo.imgSrc}">
-    
-    <div th:text="${roverData}">The test </div>
+    <div class="container">
+      <h2>Welcome to the Mars Rover Api Web App</h2> 
+      <div class="row g-2">
+        <div class="col-3" th:each="photo : ${roverData.photos}">
+             <img th:src="${photo.imgSrc}" class="img-fluid">
+        
+        
+        </div>
+      
+      
+      </div>
+      
 
-    
+      //<img th:each="photo : ${roverData.photos}" th:src="${photo.imgSrc}">
+      // <div th:text="${roverData}">The test </div>
+
+    </div>
   </body>
 </html> 
