--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Mars Rover Api App</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+
   </head>
   <body>
     <div class="container">
@@ -25,5 +26,6 @@
       <!--  <div th:text="${roverData}">The test </div>   -->
 
     </div>
+        <script type=text/javascript src="/js/index.js"></script>
   </body>
 </html> 
