--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,9 +9,9 @@
     <div class="container">
       <h2>Welcome to the Mars Rover Api Web App</h2> 
       <div class="btn-group btn-group-lg" role="group" style="margin-bottom: 1em;" aria-lebel="Basic example">
-        <button type="button" class="btn btn-secondary" id="curiosity"> Curiosity </button>
-        <button type="button" class="btn btn-secondary" id="opportunity"> Opportunity </button>
-        <button type="button" class="btn btn-secondary" id="spirit"> Spirit </button>
+        <button type="button" class="btn btn-secondary" id="marsApiCuriosity"> Curiosity </button>
+        <button type="button" class="btn btn-secondary" id="marsApiOpportunity"> Opportunity </button>
+        <button type="button" class="btn btn-secondary" id="marsApiSpirit"> Spirit </button>
       
       </div>
       
