--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,7 +8,7 @@
   <body>
     <div class="container">
       <h2>Welcome to the Mars Rover Api Web App</h2> 
-      <form method="post" action="" id="frmRoverType">
+      <form method="get" action="" id="frmRoverType">
         <input type="hidden" id="marsApiRoverData" name="marsApiRoverData" value=""/>
         <div class="btn-group btn-group-lg" role="group" style="margin-bottom: 1em;" aria-lebel="Basic example">
           <button type="button" class="btn btn-secondary" id="marsApiCuriosity"> Curiosity </button>
