--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,6 +15,13 @@
           <button type="button" class="btn btn-secondary" id="marsApiOpportunity"> Opportunity </button>
           <button type="button" class="btn btn-secondary" id="marsApiSpirit"> Spirit </button>
         </div>
+        <div class='form-group'> 
+           <label for='marsSol' class='col-form-label col-form-label-lg'> Mars Sol (aka Mars Day): </label> 
+              <input class='form-control form-control-lg' type='number' id='marsSol' name='marsSol' min='0' value='1' />
+        </div>
+        <button type="submit" class='btn btn-primary btn-lg'> Submit </button>
+        
+       
       </form>
       
       <div class="row g-2">
