--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,20 +9,20 @@
     <div class="container">
       <h2>Welcome to the Mars Rover Api Web App</h2> 
       <form method="get" action="" id="frmRoverType">
-        <input type="hidden" id="marsApiRoverData" name="marsApiRoverData" value=""/>
+        <input type="hidden" th:field="${homeDto.marsApiRoverData}" />
         <div class="btn-group btn-group-lg" role="group" style="margin-bottom: 1em;" aria-lebel="Basic example">
           <button type="button" class="btn btn-secondary" id="marsApiCuriosity"> Curiosity </button>
           <button type="button" class="btn btn-secondary" id="marsApiOpportunity"> Opportunity </button>
           <button type="button" class="btn btn-secondary" id="marsApiSpirit"> Spirit </button>
         </div>
         <div>
-          <input class='form-check-input' type='checkbox' value="" id="defaultCheck1" name='defaultCheck1'>
-          <label class=form-check-label for=defaultCheck1> Default Checkbox </label>
-        
+          <input class='form-check-input' type='checkbox' th:field="${homeDto.defaultCheck1}">
+          <label class=form-check-label for=defaultCheck1> Default Checkbox </label>       
         </div>
+        
         <div class='form-group'> 
            <label for='marsSol' class='col-form-label col-form-label-lg'> Mars Sol (aka Mars Day): </label> 
-              <input class='form-control form-control-lg' type='number' id='marsSol' name='marsSol' min='0' value='1' />
+              <input class='form-control form-control-lg' type='number' th:field="${homeDto.marsSol}" min='0' />
         </div>
         
         <button type="submit" class='btn btn-primary btn-lg'> Submit </button>
