--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,10 +15,53 @@
           <button type="button" class="btn btn-secondary" id="marsApiOpportunity"> Opportunity </button>
           <button type="button" class="btn btn-secondary" id="marsApiSpirit"> Spirit </button>
         </div>
+
+  private Boolean cameraFhaz;
+  private Boolean cameraRhaz;
+  private Boolean cameraMast;
+  private Boolean cameraChemcam;
+  private Boolean cameraMahli;
+  private Boolean cameraMardi;
+  private Boolean cameraNavcam;
+  private Boolean cameraPancam;
+  private Boolean cameraMinutes;
         <div>
-          <input class='form-check-input' type='checkbox' th:field="${homeDto.defaultCheck1}">
-          <label class=form-check-label for=defaultCheck1> Default Checkbox </label>       
+          <input class='form-check-input' type='checkbox' th:field="${homeDto.cameraFhaz}">
+          <label class=form-check-label for=cameraFhaz> Front Hazard Avoidance Camera </label>       
         </div>
+        <div>
+          <input class='form-check-input' type='checkbox' th:field="${homeDto.cameraRhaz}">
+          <label class=form-check-label for=cameraRhaz> Rear Hazard Avoidance Camera </label>       
+        </div>
+        <div>
+          <input class='form-check-input' type='checkbox' th:field="${homeDto.cameraMast}">
+          <label class=form-check-label for=cameraMast> Mast Camera </label>       
+        </div>
+        <div>
+          <input class='form-check-input' type='checkbox' th:field="${homeDto.cameraChemcam}">
+          <label class=form-check-label for=cameraChemcam> Chemistry and Camera Complex</label>       
+        </div>
+        <div>
+          <input class='form-check-input' type='checkbox' th:field="${homeDto.cameraMahli}">
+          <label class=form-check-label for=cameraMahli> Mars Hand Lens Imager </label>       
+        </div>
+        <div>
+          <input class='form-check-input' type='checkbox' th:field="${homeDto.cameraMardi}">
+          <label class=form-check-label for=cameraMardi> Mars Descent Imager </label>       
+        </div>
+        <div>
+          <input class='form-check-input' type='checkbox' th:field="${homeDto.cameraNavcam}">
+          <label class=form-check-label for=cameraNavcam> Navigation Camera </label>       
+        </div>
+        <div>
+          <input class='form-check-input' type='checkbox' th:field="${homeDto.cameraPancam}">
+          <label class=form-check-label for=cameraPancam> Panoramic Camera </label>       
+        </div>
+        <div>
+          <input class='form-check-input' type='checkbox' th:field="${homeDto.cameraMinites}">
+          <label class=form-check-label for=cameraMinites> Mini-TES </label>       
+        </div>
+
         
         <div class='form-group'> 
            <label for='marsSol' class='col-form-label col-form-label-lg'> Mars Sol (aka Mars Day): </label> 
