--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,54 +15,53 @@
           <button type="button" class="btn btn-secondary" id="marsApiOpportunity"> Opportunity </button>
           <button type="button" class="btn btn-secondary" id="marsApiSpirit"> Spirit </button>
         </div>
-
-  private Boolean cameraFhaz;
-  private Boolean cameraRhaz;
-  private Boolean cameraMast;
-  private Boolean cameraChemcam;
-  private Boolean cameraMahli;
-  private Boolean cameraMardi;
-  private Boolean cameraNavcam;
-  private Boolean cameraPancam;
-  private Boolean cameraMinutes;
-        <div>
-          <input class='form-check-input' type='checkbox' th:field="${homeDto.cameraFhaz}">
-          <label class=form-check-label for=cameraFhaz> Front Hazard Avoidance Camera </label>       
-        </div>
-        <div>
-          <input class='form-check-input' type='checkbox' th:field="${homeDto.cameraRhaz}">
-          <label class=form-check-label for=cameraRhaz> Rear Hazard Avoidance Camera </label>       
-        </div>
-        <div>
-          <input class='form-check-input' type='checkbox' th:field="${homeDto.cameraMast}">
-          <label class=form-check-label for=cameraMast> Mast Camera </label>       
-        </div>
-        <div>
-          <input class='form-check-input' type='checkbox' th:field="${homeDto.cameraChemcam}">
-          <label class=form-check-label for=cameraChemcam> Chemistry and Camera Complex</label>       
-        </div>
-        <div>
-          <input class='form-check-input' type='checkbox' th:field="${homeDto.cameraMahli}">
-          <label class=form-check-label for=cameraMahli> Mars Hand Lens Imager </label>       
-        </div>
-        <div>
-          <input class='form-check-input' type='checkbox' th:field="${homeDto.cameraMardi}">
-          <label class=form-check-label for=cameraMardi> Mars Descent Imager </label>       
-        </div>
-        <div>
-          <input class='form-check-input' type='checkbox' th:field="${homeDto.cameraNavcam}">
-          <label class=form-check-label for=cameraNavcam> Navigation Camera </label>       
-        </div>
-        <div>
-          <input class='form-check-input' type='checkbox' th:field="${homeDto.cameraPancam}">
-          <label class=form-check-label for=cameraPancam> Panoramic Camera </label>       
-        </div>
-        <div>
-          <input class='form-check-input' type='checkbox' th:field="${homeDto.cameraMinites}">
-          <label class=form-check-label for=cameraMinites> Mini-TES </label>       
-        </div>
-
+        <div class="row">
+          <div class="col-12 col-md-4">
+            <div class="form-check">
+              <input class='form-check-input' type='checkbox' th:field="${homeDto.cameraFhaz}">
+              <label class=form-check-label for=cameraFhaz1> Front Hazard Avoidance Camera </label>       
+            </div>
+            <div class="form-check">
+              <input class='form-check-input' type='checkbox' th:field="${homeDto.cameraRhaz}">
+              <label class=form-check-label for=cameraRhaz1> Rear Hazard Avoidance Camera </label>       
+            </div>
+            <div class="form-check">
+              <input class='form-check-input' type='checkbox' th:field="${homeDto.cameraMast}">
+              <label class=form-check-label for=cameraMast1> Mast Camera </label>       
+            </div>
+          </div>
+          <div class="col-12 col-md-4">
+            <div class="form-check">
+              <input class='form-check-input' type='checkbox' th:field="${homeDto.cameraChemcam}">
+              <label class=form-check-label for=cameraChemcam1> Chemistry and Camera Complex</label>       
+            </div>
+            <div class="form-check">
+              <input class='form-check-input' type='checkbox' th:field="${homeDto.cameraMahli}">
+              <label class=form-check-label for=cameraMahli1> Mars Hand Lens Imager </label>       
+            </div>
+            <div class="form-check">
+              <input class='form-check-input' type='checkbox' th:field="${homeDto.cameraMardi}">
+              <label class=form-check-label for=cameraMardi1> Mars Descent Imager </label>       
+            </div>          
+          </div>
+          <div class="col-12 col-md-4">
+            <div class="form-check">
+              <input class='form-check-input' type='checkbox' th:field="${homeDto.cameraNavcam}">
+              <label class=form-check-label for=cameraNavcam1> Navigation Camera </label>       
+            </div>
+            <div class="form-check">
+              <input class='form-check-input' type='checkbox' th:field="${homeDto.cameraPancam}">
+              <label class=form-check-label for=cameraPancam1> Panoramic Camera </label>       
+            </div>
+            <div class="form-check">
+              <input class='form-check-input' type='checkbox' th:field="${homeDto.cameraMinites}">
+              <label class=form-check-label for=cameraMinites1> Mini-TES </label>       
+            </div>
+          </div>
         
+        </div>
+
+       
         <div class='form-group'> 
            <label for='marsSol' class='col-form-label col-form-label-lg'> Mars Sol (aka Mars Day): </label> 
               <input class='form-control form-control-lg' type='number' th:field="${homeDto.marsSol}" min='0' />
